--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,22 @@
         <servlet-name>ProdutoController</servlet-name>
         <servlet-class>com.dragsters.controllers.ProdutoController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CriarCargo</servlet-name>
+        <servlet-class>com.dragsters.controllers.CriarCargo</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FuncionarioController</servlet-name>
+        <servlet-class>com.dragsters.controllers.FuncionarioController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CriarFuncionario</servlet-name>
+        <servlet-class>com.dragsters.controllers.CriarFuncionario</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BuscarCargos</servlet-name>
+        <servlet-class>com.dragsters.controllers.BuscarCargos</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CargoController</servlet-name>
         <url-pattern>/CargoController</url-pattern>
@@ -47,6 +63,22 @@
     <servlet-mapping>
         <servlet-name>ProdutoController</servlet-name>
         <url-pattern>/ProdutoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CriarCargo</servlet-name>
+        <url-pattern>/CriarCargo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FuncionarioController</servlet-name>
+        <url-pattern>/FuncionarioController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CriarFuncionario</servlet-name>
+        <url-pattern>/CriarFuncionario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BuscarCargos</servlet-name>
+        <url-pattern>/BuscarCargos</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
