feat: Criar controle de acesso ao sistema

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <filter-class>com.dragsters.filter.AutorizacaoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <url-pattern>/protected/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>CargoController</servlet-name>
         <servlet-class>com.dragsters.controllers.CargoController</servlet-class>
@@ -95,6 +103,14 @@
     <servlet>
         <servlet-name>DetalheFuncionario</servlet-name>
         <servlet-class>com.dragsters.controllers.DetalheFuncionario</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LoginController</servlet-name>
+        <servlet-class>com.dragsters.controllers.LoginController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LogoutController</servlet-name>
+        <servlet-class>com.dragsters.controllers.LogoutController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CargoController</servlet-name>
@@ -192,9 +208,20 @@
         <servlet-name>DetalheFuncionario</servlet-name>
         <url-pattern>/DetalheFuncionario</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginController</servlet-name>
+        <url-pattern>/LoginController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutController</servlet-name>
+        <url-pattern>/LogoutController</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>protected/pages/index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
